[tool.poetry]
name = "pulse-plus"
version = "0.0.1"
description = "Utilities to explore, convert PhonePe's Pulse data"
authors = ["Kracekumar <me@kracekumar.com>"]
license = "BSD 3-clause"

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.17"
click = "^8.0.1"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
black = "^21.8b0"
mypy = "^0.910"
isort = "^5.9.3"
datasette = "^0.58.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
